--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,8 @@
   min-height: 100vh;
   background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
 }
+
+.search-form {
+  min-height: 10vh;
+  display: flex;
+}
